# fst_notebook_repl

./: README.md  foma_notebook.py  foma_python.ipynb
foma_kernel/: pyproject.toml
